tests/rosetta/out/Smalltalk/character-codes-3.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| ord chr b r s |
ord := [:ch | ((ch = 'a')) ifTrue: [
97.
] .
((ch = 'π')) ifTrue: [
960.
] .
((ch = 'A')) ifTrue: [
65.
] .
0. ].
chr := [:n | ((n = 97)) ifTrue: [
'a'.
] .
((n = 960)) ifTrue: [
'π'.
] .
((n = 65)) ifTrue: [
'A'.
] .
'?'. ].
b := ord value: 'a'.
r := ord value: 'π'.
s := 'aπ'.
Transcript show: ((((((((((b asString)) + (' '))) + ((r asString)))) + (' '))) + s)) printString; cr.
Transcript show: ((((((((('string cast to []rune: [') + ((b asString)))) + (' '))) + ((r asString)))) + ']')) printString; cr.
Transcript show: ((((((('    string range loop: ') + ((b asString)))) + (' '))) + ((r asString)))) printString; cr.
Transcript show: '         string bytes: 0x61 0xcf 0x80'; cr.
